# iacuc-protocol-generator

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  render.yaml
ai_review_results/: 438331cd-e50c-4d48-b782-22073dc8c009.json  49550671-451a-42e3-8495-4a00aea04116.json  964e55ef-c156-4888-96be-f617ee9ff67a.json  c1f3f217-419c-4d6c-928a-bdc34aae5bee.json
docs/: ARCHITECTURE_BLUEPRINT.md  DEPLOYMENT.md  IMPLEMENTATION_STEPS.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: footer.tsx  header.tsx
frontend/lib/: api.ts
knowledge_base/formulary/: sample_drug_formulary.json
protocols/: 186f8778-8c54-46c7-b3c7-bd330f0e74a5.json  284843e2-3098-4ac5-b3bb-6e6ec83dfe77.json  39a36edc-80dd-491d-a470-78adcec88a0e.json  438331cd-e50c-4d48-b782-22073dc8c009.json  49550671-451a-42e3-8495-4a00aea04116.json  4c42c525-e87f-4303-b657-79ae16c4032c.json  6d3fdb53-5e7b-4fe7-a370-382334b40ef3.json  964e55ef-c156-4888-96be-f617ee9ff67a.json  9ca4465f-a1a5-4346-abfa-195083a9adb6.json  c1f3f217-419c-4d6c-928a-bdc34aae5bee.json  db9ced11-044b-41dd-ae32-5f952ee468b4.json  e60584ce-86ea-4e41-bc63-cfe1f7c57065.json  f8f4c5c7-b72d-4324-af48-f757afe7421d.json
scripts/: export_protocol.py  generate_questionnaire_schema.py  generate_sample_protocol.py  ingest_documents.py  test_ai_agents.py  test_formulary_lookup.py  test_lay_summary_agent.py  test_rag_retrieval.py  test_regulatory_scout.py  verify_api_keys.py
src/: config.py  main.py
src/agents/: __init__.py  alternatives_researcher.py  crew.py  intake_specialist.py  lay_summary_writer.py  llm.py  procedure_writer.py  protocol_assembler.py  regulatory_scout.py  statistical_consultant.py  veterinary_reviewer.py
src/api/: __init__.py  app.py
src/protocol/: __init__.py  export.py  schema.py
tests/: conftest.py
(+67 files in other folders)
